# tfl-to-sql

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  handover.md  pyproject.toml
.github/workflows/: ci.yml
App/: app_logic.py  requirements.txt  run.sh  streamlit_app.py
Code/: tfl_to_sql.py
Tableau Prep Flows/: FST Segmentation Prep.tfl
tests/: conftest.py  test_app_logic.py  test_clean_steps_extended.py  test_cli.py  test_dry_run_validate.py  test_expression_parser.py  test_fetch_schema.py  test_golden.py  test_schema_and_overrides.py  test_sync_to_repo.py  test_union.py  test_unpivot.py
tests/golden/combined_bigquery/: output_2.sql
tests/golden/combined_dataform/: output_2.sqlx
tests/golden/split_bigquery/: 01_fst_ecom_retail_sales_data_sources.sql  02_rolling_date_calc.sql  03_filters.sql  04_rfm.sql  05_dupe_days_since_last_purchase.sql  06_channel_split.sql  07_department_split.sql  08_category_split.sql  09_promocode.sql  10_recent_signals.sql  11_markdown_status.sql  12_cust_order.sql  13_agg_chan_group.sql  14_add_dept_group.sql  15_add_cat_group.sql  16_promocode_count.sql  17_returns.sql  18_aggregate_md_and_fp.sql  19_remove_order_id.sql  20_channel_demad.sql  21_department_demand.sql  22_category_demand.sql  23_clean_1.sql  24_remove_order_id.sql  25_discount.sql  26_fp_md_demand.sql  27_avg_and_std.sql  28_cat_demand.sql  29_count_of_categories.sql  30_promocodes.sql  31_seasonality.sql  32_cat_count.sql  33_aggregating.sql  34_purchase_pattern.sql  (+11 more)
tools/: batch_convert_report.py  dry_run_validate.py  fetch_schema.py  sync_to_repo.py
